// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Custom Manifests > should handle invalid manifest files gracefully 1`] = `[]`;

exports[`Custom Manifests > should load and use custom manifest files 1`] = `
[
  {
    "message": "Module "@e18e/fake-0" can be replaced with inline native syntax. Use picocolors, kleur, or native console styling. See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/fake-0.md.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-1" can be replaced with inline native syntax. Use native JavaScript methods or specific lodash functions.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-2" can be replaced with native functionality. Required Node >= 12.0.0. You can read more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-3" can be replaced with a more performant alternative. For this project, we recommend switching to "node-fetch". See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/request-alternatives.md.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-4" can be removed, and native functionality used instead",
    "score": 0,
    "severity": "warning",
  },
]
`;

exports[`Custom Manifests > should load multiple manifest files 1`] = `
[
  {
    "message": "Module "@e18e/fake-0" can be replaced with inline native syntax. Use picocolors, kleur, or native console styling. See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/fake-0.md.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-1" can be replaced with inline native syntax. Use native JavaScript methods or specific lodash functions.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-2" can be replaced with native functionality. Required Node >= 12.0.0. You can read more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-3" can be replaced with a more performant alternative. For this project, we recommend switching to "node-fetch". See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/request-alternatives.md.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-4" can be removed, and native functionality used instead",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-5" can be replaced with inline native syntax. Use Fastify, Koa, or native Node.js http module.",
    "score": 0,
    "severity": "warning",
  },
  {
    "message": "Module "@e18e/fake-6" can be removed, and native functionality used instead",
    "score": 0,
    "severity": "warning",
  },
]
`;

exports[`Custom Manifests > should prioritize custom replacements over built-in ones 1`] = `
{
  "withCustom": [
    {
      "message": "Module "@e18e/fake-0" can be replaced with inline native syntax. Use picocolors, kleur, or native console styling. See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/fake-0.md.",
      "score": 0,
      "severity": "warning",
    },
    {
      "message": "Module "@e18e/fake-1" can be replaced with inline native syntax. Use native JavaScript methods or specific lodash functions.",
      "score": 0,
      "severity": "warning",
    },
    {
      "message": "Module "@e18e/fake-2" can be replaced with native functionality. Required Node >= 12.0.0. You can read more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat.",
      "score": 0,
      "severity": "warning",
    },
    {
      "message": "Module "@e18e/fake-3" can be replaced with a more performant alternative. For this project, we recommend switching to "node-fetch". See more at https://github.com/es-tooling/module-replacements/blob/main/docs/modules/request-alternatives.md.",
      "score": 0,
      "severity": "warning",
    },
    {
      "message": "Module "@e18e/fake-4" can be removed, and native functionality used instead",
      "score": 0,
      "severity": "warning",
    },
  ],
  "withoutCustom": [],
}
`;
